# mailbox.py

./: MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
mailbox/: __init__.py  core.py  error.py  message.py  provider.py  utils.py
mailbox/providers/: memory.py  queue.py
mailbox/tests/: test_mailbox.py
scripts/: publish.sh
