[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mboxlabs-mailbox"
version = "0.1.0"
description = "A lightweight, pluggable mailbox/queue kernel for async communication"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "MboxLabs Team"}
]
keywords = ["mailbox", "queue", "async", "messaging", "actor-model", "erlang"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/mboxlabs/mailbox.py"
Repository = "https://github.com/mboxlabs/mailbox.py"
Documentation = "https://github.com/mboxlabs/mailbox.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailbox*"]
exclude = ["tests*"]
